# advent-of-code-2023

./: .gitignore  pyproject.toml  readme.md
01/: __main__.py  puzzle.py  puzzle_test.py
02/: __main__.py  game.py  game_test.py  puzzle.py  puzzle_test.py
03/: __main__.py  puzzle.py  puzzle_test.py  schematic.py  schematic_test.py
04/: __main__.py  card.py  card_test.py  puzzle.py  puzzle_test.py
05/: __main__.py  almanac.py  puzzle.py  puzzle_test.py
06/: __main__.py  puzzle.py  puzzle_test.py
07/: __main__.py  hand.py  hand_test.py  puzzle.py  puzzle_test.py
advent_of_code/: __init__.py  __main__.py  cubes.py  gears.py  network.py  oasis.py  scratchcards.py  solver.py  trebuchet.py
tests/: cubes_test.py  gears_test.py  network_test.py  oasis_test.py  scratchcards_test.py  trebuchet_test.py
